GNOME Bugzilla – Bug 721317
Fix crash in testbbox and update gtkenum docs
Last modified: 2014-01-04 19:00:34 UTC
Created attachment 265114 [details] [review] Remove references to GTK_BUTTONBOX_DEFAULT_STYLE Both gtkenums.h and testbbox.c reference GTK_BUTTONBOX_DEFAULT_STYLE, an unimplemented and undocumented flag. Running testbbox and chosing said flag causes a crash due to unidentified behavior. Attached is a patch that removes the flag from both the gtkenums comments and the testbbox test. It also properly select the default style.
Created attachment 265115 [details] [review] Updated to fix crash and clean up test Updated patch fixes crash and uses get_active instead of get_active_test.